welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:5: error: not found: value Color
	setCouleurBrosse(Color.red);
                         ^MethodsDogHouse:6: error: value -< is not a member of Int
 while(j-<4){
        ^MethodsDogHouse:26: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:32: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:42: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:52: error: not found: value dogHouse
		dogHouse();		
                ^