welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
var i=0;
var j=0;

	leveBrosse();
	setCouleurBrosse(Color.red);
 while(j-<4){
		avance(); avance(); gauche();
	     j=j+1;
	}
	
	
	
	
	
	
	
	
	
	
	